# SimpleGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
example/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
include/SimpleGL/: SimpleGL.h  buffers.h  camera.h  editor.h  light.h  material.h  mesh.h  object.h  primitives.h  renderer.h  scene.h  shader.h  texture.h  transform.h  window.h
sandbox/: main.cpp
sandbox/shaders/: flat.frag  flat.vert  multi_light.frag  multi_light.vert
src/: buffers.cpp  camera.cpp  editor.cpp  light.cpp  mesh.cpp  object.cpp  primitives.cpp  renderer.cpp  scene.cpp  shader.cpp  texture.cpp  transform.cpp  window.cpp
